# l1tf_reloaded

./: .clang-format  .gitignore  .gitmodules  .mds.cache  CMakeLists.txt  Makefile  README.md  cache_eviction  exploit
code/: .clang-format  .gitignore  Makefile  asm.h  mispredict
code/include/: asm.h  constants.h  flush_and_reload.h  l1tf.h  pagemap.h  ret2spec.h  statistics.h
code/scripts/: plot_cache_hit_and_misses.py  spawn_victims.sh
code/src/: find_threshold.c  flush_and_reload.c  l1tf.c  mds.c  ret2spec.S  ridl.c  rsb.c  statistics.c  victim.c
code/src/l1tf/: .gitignore  Makefile  fast_segfault_handler_test.S  kernel_l1tf.c
code/src/l1tf/kernel/: Makefile  l1tf.c  l1tf.h
code/src/l1tf/user/: l1tf.c
docs/: zotero.bib
docs/project_plan/: .gitignore  Makefile  main.tex
include/: asm.h  benchmark.h  cache_eviction.h  config.h  constants.h  find_threshold.h  flush_and_reload.h  helpers.h  hypercall.h  l1tf.h  leak.h  msr.h  pagemap.h  prime.h  ptedit_header.h  reverse.h  secret.h  spectre.h  statistics.h  time_deque.h  timing.h  util.h
notes/journals/: 2024_01_22.md  2024_01_23.md  2024_01_24.md  2024_01_25.md  2024_01_26.md  2024_01_28.md  2024_01_29.md  2024_01_31.md  2024_02_01.md  2024_02_02.md  2024_02_12.md  2024_02_13.md  2024_02_16.md  2024_02_19.md  2024_02_20.md  2024_02_21.md  2024_02_22.md  2024_02_23.md  2024_02_26.md  2024_02_27.md  2024_02_28.md  2024_02_29.md  2024_03_01.md
notes/logseq/: config.edn
notes/logseq/bak/journals/2024_01_22/: 2024-01-23T10_41_06.825Z.Desktop.md  2024-01-23T10_42_39.855Z.Desktop.md
notes/logseq/bak/journals/2024_01_26/: 2024-02-12T09_52_17.806Z.Desktop.md
notes/logseq/bak/journals/2024_02_12/: 2024-02-12T13_14_49.251Z.Desktop.md
notes/logseq/bak/logseq/custom/: 2024-01-22T12_00_20.116Z.Desktop.css
scripts/: measure_leakage_accuracy.py  pem.py  spawn_victims.sh
setup/: _run-vm.sh  bootstrap-vm.sh  cloudsuite.md  helper-hc.patch  install_nginx_https.sh  kconfig  l1tf-pf.patch  run-vm.sh  setup-gce.md  setup-local.md  setup.md
src/: benchmark.c  cache_eviction.c  check_cpuid.c  exploit.c  fast_segfault_handler_test.S  flush_and_reload.c  half_spectre_leak.c  helpers.c  hypercall.c  kvm_leak.c  l1tf.c  leak.c  msr.c  prime.c  quick_ssh.c  quicktests.c  ret2spec.S  reverse.c  rsb.c  spectre.c  statistics.c  time_deque.c  util.c  victim.c
src/hypercall/: Makefile  hypercall.c  hypercall.h  leak.c
src/hypercall/kvm_assist/: Makefile  kvm_assist.c
src/modules/: Makefile
src/modules/hypercall/: .gitignore  Makefile  hypercall.c
src/modules/kvm_assist/: Makefile  kvm_assist.c
src/spectre_tester/: .gitignore  Makefile  spectre_common.h  spectre_scanner_host.c  spectre_tester_guest.c
